hub/manifests/git/03-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: git
    app.kubernetes.io/name: hub-git
  name: hub-git
  namespace: git
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: hub-git
  type: ClusterIP
